cabal-version: 3.6

-- Created : 11 October 2024

name:
  pointfree-wasm
version:
  0.1
synopsis:
  TODO
description:
  TODO
copyright:
  (c) Sergey Vinokurov 2024
license:
  Apache-2.0
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

extra-source-files:
  Changelog.md
  Readme.md

homepage:
  https://github.com/sergv/pointfree-wasm

source-repository head
  type: git
  location: https://github.com/sergv/pointfree-wasm.git

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  -- if impl(ghc >= 8.10)
  --   ghc-options:
  --     -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-missing-poly-kind-signatures

-- library
--   import: ghc-options
--   exposed-modules:
--     Pointfree.Wasm
--   hs-source-dirs:
--     src
--   build-depends:
--     , base >= 4.16
--     , ghc-experimental
--     , pointfree

executable pointfree-wasm
  import: ghc-options
  -- main-is:
  --   exe/PointfreeWasm.hs
  main-is:
    src/Pointfree/Wasm.hs
  c-sources:
    cbits/init.c
  build-depends:
    , base >= 4.16
    , ghc-experimental
    , pointfree
  ghc-options:
    -rtsopts
    -- -threaded
    -- "-with-rtsopts=-N -A32M"
    -- -main-is PointfreeWasm
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=pointfreeWasm"

