cabal-version: 3.6

-- Created : 11 October 2024

name:
  pointfree-wasm
version:
  0.1
synopsis:
  WASM application to transform Haskell expressions to pointfree
copyright:
  (c) Sergey Vinokurov 2024
license:
  Apache-2.0
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

homepage:
  https://github.com/sergv/pointfree-wasm

source-repository head
  type: git
  location: https://github.com/sergv/pointfree-wasm.git

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-missing-poly-kind-signatures

executable pointfree-wasm
  import: ghc-options
  main-is:
    src/Pointfree/Wasm.hs
  c-sources:
    cbits/init.c
  build-depends:
    , base >= 4.16
    , ghc-experimental
    , pointfree
  ghc-options:
    -rtsopts
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=pointfreeWasm"

